# ProofPlayMarkets

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
docs/: demo-script.md  settlement-architecture.md  txline-integration.md
scripts/: activate-and-test.ts  postinstall.js  subscribe-txline.ts  test-fixtures.ts  test-scores.ts  txline-keypair.json
solana/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
solana/app/src/: index.ts  types.ts
solana/migrations/: deploy.ts
solana/programs/prediction-market/: Cargo.toml
solana/programs/prediction-market/src/: lib.rs
solana/programs/prediction-market/src/instructions/: mod.rs
solana/tests/: prediction-market.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/rooms/: route.ts
src/app/demo/: page.tsx
src/app/docs/: page.tsx
src/app/fixtures/: page.tsx
src/app/fixtures/[fixtureId]/: page.tsx
src/app/rooms/: page.tsx
src/app/rooms/[roomId]/: page.tsx
src/app/rooms/create/: page.tsx
src/components/: PrivyProvider.tsx  WalletButton.tsx
src/components/fixtures/: FixtureCard.tsx  FixtureHeroCard.tsx  LiveScoreBanner.tsx
src/components/layout/: AppShell.tsx  Navbar.tsx
src/components/rooms/: ThresholdMeter.tsx
src/components/ui/: GlassCard.tsx  SectionHeader.tsx  Skeleton.tsx  SolanaBadge.tsx  StatusPill.tsx  TxLineBadge.tsx
src/lib/: teams.ts
src/lib/rooms/: store.ts  types.ts
src/lib/solana/: constants.ts  idl.ts  server.ts
src/lib/txline/: client.ts  server-init.ts  status.ts  types.ts  useLiveScore.ts
(+14 files in other folders)
