[package]
name = "prediction-market"
version = "0.1.0"
description = "ProofPlay prediction market room — settle sports bets with verifiable TxLINE proofs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "=0.32.0"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

